--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   <title>Zuck Hunt</title>
   <script src="/snarkjs.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
